--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 .jumbotron{
-    background-color: yellow;
-    color: black;
 }
 
-.item-footer{
+/* .item-footer{
     color: white;
+} */
+footer{
+    width: 100%;
 }
