--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
-.footer {
+/* .footer {
     width: 100%;
+} */
+
+.jumbotron h1{
+    background: linear-gradient(rgba(5, 7, 12, 0.60), rgba(5, 7, 12, 0.60)),
+    url(https://www.civitatis.com/blog/wp-content/uploads/2022/08/mejores-playas-colombia.jpg);
+    opacity: 1;
+    background-position: center;
+    background-size: cover;
+    padding: 70px 70px;
+    color: white;
+    font-size: 5rem;
 }
+
+/* .jumbotron h1{
+    font-size: 50px;
+} */
