--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
-/* .footer {
-    width: 100%;
-} */
-
+body{
+    padding-top: 60px;
+}
 .jumbotron h1{
     background: linear-gradient(rgba(5, 7, 12, 0.60), rgba(5, 7, 12, 0.60)),
     url(https://www.civitatis.com/blog/wp-content/uploads/2022/08/mejores-playas-colombia.jpg);
@@ -13,7 +12,7 @@
     font-size: 5rem;
 }
 .navbar{
-    position: fixed;
+    position: fixebody;
 }
 
 .iconos{
