--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,9 @@ body{
     color: white;
     font-size: 5rem;
 }
-.navbar{
+/* .navbar{
     position: fixebody;
-}
+} */
 
 .iconos{
     padding-right: 5px;
