--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+$blue: #0d6efd;
+
 body{
     padding-top: 60px;
 }
@@ -20,5 +22,5 @@ body{
     padding-right: 5px;
 }
 footer{
-    background-color: #0d6efd;
+    background-color: $blue;
 }
