--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,10 @@
 $blue: #0d6efd;
+@mixin top-padding($padding-top){
+    padding-top: $padding-top;
+}
 
 body{
-    padding-top: 60px;
+    @include top-padding(60px);
 }
 .jumbotron h1{
     background: linear-gradient(rgba(5, 7, 12, 0.60), rgba(5, 7, 12, 0.60)),
